bunch of new stuff

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,13 +4,13 @@
     %title
       Comunidad de Estudiantes
       de Ingenieria de Sistemas
-    = javascript_include_tag "prototype.js", "jquery.min.js", "jquery.tools.min.js", "jquery.ui.min.js", "jquery.prettyPhoto.js", :cache => true
+    -# = javascript_include_tag "prototype.js", "jquery.min.js", "jquery.tools.min.js", "jquery.ui.min.js", "jquery.prettyPhoto.js", :cache => true
     = stylesheet_link_tag "event_calendar", "prettyPhoto", "eafit","curriculovivo.css", "theme/slide_show.css", 'forum', :cache => true
     = javascript_include_tag "application"
-    = javascript_include_tag "forum.js","effects.js","lightbox.js" , :plugin => "community_engine", :cache => "comengine"
-    = javascript_include_tag "flowplayer-3.1.4.min"
+    -# = javascript_include_tag "forum.js","effects.js","lightbox.js" , :plugin => "community_engine", :cache => "comengine"
+    -# = javascript_include_tag "flowplayer-3.1.4.min"
     -# = javascript_include_tag "admin" if current_user and current_user.admin?
-    = javascript_include_tiny_mce_if_used
+      -# = javascript_include_tiny_mce_if_used
     -# = tiny_mce if using_tiny_mce?
     -# = javascript_include_tag "AC_RunActiveContent", :plugin => "community_engine" if current_page?(:controller => 'photos', :action => 'new') or current_page?(:controller => 'statistics', :action => 'index')
     = yield(:head)
