--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Subjects#new</h1>
-<p>Find me in app/views/subjects/new.html.erb</p>
+<h1>New</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back' , subjects_path %>
+
